WeeChat ChangeLog
=================
Sébastien Helleu <flashcode@flashtux.org>
v0.3.6-dev, 2011-08-26


Version 0.3.6 (under dev!)
--------------------------

* core: add new option weechat.look.item_buffer_filter
* core: change default value of option weechat.network.gnutls_ca_file to
  "/etc/ssl/certs/ca-certificates.crt"
* core: replace deprecated gnutls function
  gnutls_certificate_client_set_retrieve_function by new function
  gnutls_certificate_set_retrieve_function (gnutls >= 2.11.0)
* core: use dynamic buffer size for calls to vsnprintf
* core: fix memory leak in unhook of hook_connect
* core: fix memory leak in display of empty bar items
* core: fix input of wide UTF-8 chars under Cygwin (bug #34061)
* core: allow name of buffer for command /buffer clear (task #11269)
* core: add new command /repeat (execute a command several times)
* core: save and restore layout for buffers and windows on /upgrade
* core: fix bugs with automatic layout (bug #26110), add support of merged
  buffers in layout (task #10893)
* core: add option -all for command /buffer unmerge
* core: fix crash when invalid UTF-8 chars are inserted in command line
  (bug #33471)
* core: stop horizontal bar scroll at the end of content (for bars with
  horizontal filling) (bug #27908)
* core: fix crash when building hashtable string with keys and values
* core: add number in windows (add optional argument "-window" so some actions
  for command /window)
* core: replace buffer name by window number in /bar scroll
* core: allow buffer name in /buffer close
* core: add support of mouse: new command /mouse, new key context "mouse",
  new options weechat.look.mouse and weechat.look.mouse_timer_delay (task #5435)
* core: add command /cursor (free movement of cursor on screen), with key
  context "search"
* core: automatic scroll direction in /bar scroll (x/y is now optional)
* core: add optional delay for key grab (commands /input grab_key and
  /input grab_key_command, default is 500 milliseconds)