@@ -323,6 +323,26 @@
 ** Typ: integer
 ** Werte: time, buffer, prefix, suffix, message (Standardwert: `message`)
 
+* *weechat.look.bar_more_down*
+** Beschreibung: `string displayed when bar can be scrolled down (for bars with filling different from "horizontal")`
+** Typ: Zeichenkette
+** Werte: beliebige Zeichenkette (Standardwert: `"++"`)
+
+* *weechat.look.bar_more_left*
+** Beschreibung: `string displayed when bar can be scrolled to the left (for bars with filling "horizontal")`
+** Typ: Zeichenkette
+** Werte: beliebige Zeichenkette (Standardwert: `"<<"`)
+
+* *weechat.look.bar_more_right*
+** Beschreibung: `string displayed when bar can be scrolled to the right (for bars with filling "horizontal")`
+** Typ: Zeichenkette
+** Werte: beliebige Zeichenkette (Standardwert: `">>"`)
+
+* *weechat.look.bar_more_up*
+** Beschreibung: `string displayed when bar can be scrolled up (for bars with filling different from "horizontal")`
+** Typ: Zeichenkette
+** Werte: beliebige Zeichenkette (Standardwert: `"--"`)
+
 * *weechat.look.buffer_notify_default*
 ** Beschreibung: `Standardeinstellung der Benachrichtigungsstufe für Buffer (dies wird genutzt um WeeChat mitzuteilen ob der Buffer in der Hotlist angezeigt werden soll oder nicht, entsprechend der Wichtigkeit der Nachricht): all=alle Nachrichten (Standard), message=Nachrichten+Highlights, highlights=nur Highlights, none=Hotlist wird niemals angezeigt.`
 ** Typ: integer
@@ -459,7 +479,7 @@
 ** Werte: 0 .. 65535 (Standardwert: `32`)
 
 * *weechat.look.item_buffer_filter*
-** Beschreibung: `string used to show that some lines are filtered in current buffer (bar item "buffer_filter"`
+** Beschreibung: `string used to show that some lines are filtered in current buffer (bar item "buffer_filter")`
 ** Typ: Zeichenkette
 ** Werte: beliebige Zeichenkette (Standardwert: `"*"`)
 
