@@ -323,6 +323,26 @@
 ** type: integer
 ** values: time, buffer, prefix, suffix, message (default value: `message`)
 
+* *weechat.look.bar_more_down*
+** description: `string displayed when bar can be scrolled down (for bars with filling different from "horizontal")`
+** type: string
+** values: any string (default value: `"++"`)
+
+* *weechat.look.bar_more_left*
+** description: `string displayed when bar can be scrolled to the left (for bars with filling "horizontal")`
+** type: string
+** values: any string (default value: `"<<"`)
+
+* *weechat.look.bar_more_right*
+** description: `string displayed when bar can be scrolled to the right (for bars with filling "horizontal")`
+** type: string
+** values: any string (default value: `">>"`)
+
+* *weechat.look.bar_more_up*
+** description: `string displayed when bar can be scrolled up (for bars with filling different from "horizontal")`
+** type: string
+** values: any string (default value: `"--"`)
+
 * *weechat.look.buffer_notify_default*
 ** description: `default notify level for buffers (used to tell WeeChat if buffer must be displayed in hotlist or not, according to importance of message): all=all messages (default), message=messages+highlights, highlight=highlights only, none=never display in hotlist`
 ** type: integer
@@ -459,7 +479,7 @@
 ** values: 0 .. 65535 (default value: `32`)
 
 * *weechat.look.item_buffer_filter*
-** description: `string used to show that some lines are filtered in current buffer (bar item "buffer_filter"`
+** description: `string used to show that some lines are filtered in current buffer (bar item "buffer_filter")`
 ** type: string
 ** values: any string (default value: `"*"`)
 
